[gd_scene load_steps=5 format=3 uid="uid://4miojsmq5c7w"]

[ext_resource type="Script" path="res://menu/main_menu.gd" id="1_4wwuh"]
[ext_resource type="Texture2D" uid="uid://bjc1fxvwwyodl" path="res://menu/main_menu_background.png" id="1_jmmar"]
[ext_resource type="Theme" uid="uid://b8ud2usk1rgfa" path="res://menu/theme.tres" id="2_jg2mk"]
[ext_resource type="PackedScene" uid="uid://djgh5ybusj0pa" path="res://menu/credits.tscn" id="4_1e6c8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wwuh")
first_scene = "res://menu/cutscenes/cutscene_intro.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jmmar")
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -136.0
offset_right = 75.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("2_jg2mk")
text = "Spiel Starten"

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
auto_translate_mode = 1
layout_mode = 2
theme = ExtResource("2_jg2mk")
text = "Einstellungen"

[node name="CreditsButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme = ExtResource("2_jg2mk")
text = "Credits"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
auto_translate_mode = 1
layout_mode = 2
theme = ExtResource("2_jg2mk")
text = "Verlassen"

[node name="Credits" parent="." instance=ExtResource("4_1e6c8")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="gui_input" from="Credits" to="." method="_on_credits_gui_input"]
